--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,12 @@
 body
 {   
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #container
@@ -30,14 +33,19 @@ body
     padding: 0.5em;
 }
 
+#cabecera #logo{
+   width: 20px;
+   vertical-align: middle; 
+}
+
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
-    margin: 0 auto;
 }
 
 #post
 {
+    background: white;
     padding: 1em;
 }
